nextjs-graphql-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-graphql-virtual-host-ing
  namespace: dev-apps
spec:
  tls:
  - hosts:
    - nextjs-graphql.fabianbrash.com
    secretName: nextjs-graphql-fabianbash-com-prd-tls
  rules:
  - host: nextjs-graphql.fabianbrash.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nextjs-graphql-2
            port:
              number: 5000
